# django-headless

./: LICENSE  README.md  pyproject.toml  pytest.ini
headless/: __init__.py  apps.py  registry.py  settings.py  tests.py  utils.py
headless/rest/: authentication.py  builder.py  filters.py  serializers.py  test_authentication.py  test_serializers.py  tests_filters.py  viewsets.py
headless/rest/builder/: __init__.py  base.py  serializer.py  viewset.py
headless/rest/filters/: __init__.py  base.py  casting.py  lookups.py
scripts/: test_wrapper.py
tests/: conftest.py
tests/headless/: test_main.py
tests/headless/rest/: test_authentication.py  test_builder.py  test_filters.py  test_pagination.py  test_serializers.py  test_viewsets.py
