[project]
name = "django-headless"
version = "1.0.0-beta.6"
description = "Automagically create a REST API for your Django models"
authors = [
    {name = "Leon van der Grient",email = "leon@dwarsbit.nl"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.12"

[tool.poetry]
packages = [{include = "headless"}]

[tool.poetry.dependencies]
"rich" = "14.3.3"
"drf-flex-fields" = "1.0.2"
djangorestframework-stubs = "^3.16.8"

[tool.poetry.group.dev.dependencies]
black = "26.3.1"
Django= "6.0.3"
djangorestframework= "3.17.1"
pytest = "9.0.2"
"pytest-django" = "4.12.0"
pytest-cov = "^7.1.0"

[tool.poetry.scripts]
test = "scripts.test_wrapper:main_test"
test-verbose = "scripts.test_wrapper:main_test_verbose"
test-cov = "scripts.test_wrapper:main_test_cov"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
